サービスコンテナによる決済プラットフォームの切り替えサンプル実装
